# ros2_learning

./: LICENSE  README.md
#__REFS/: cpp_quirks  useful_ros2_commands
install/my_cpp_pkg/lib/my_cpp_pkg/: add_two_ints_client  add_two_ints_client_no_oop  add_two_ints_server  battery  cpp_node  number_counter  robot_news_station  smartphone
install/my_cpp_pkg/share/my_cpp_pkg/: package.sh  package.xml
install/my_py_pkg/lib/my_py_pkg/: robot_news_subscriber
install/my_py_pkg/share/my_py_pkg/: package.sh
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: ROS2_CLIENT_TEMPLATE.cpp  ROS2_NODE_TEMPLATE.cpp  add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  battery.cpp  my_first_node.cpp  number_counter.cpp  robot_news_station.cpp  smartphone.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: ROS2_CLIENT_TEMPLATE.py  add_two_ints_client.py  add_two_ints_client_no_oop.py  battery.py  led_panel.py  my_first_node.py  number_publisher.py  robot_news_station.py  robot_news_subscriber.py
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/launch/: number_app.launch.py  robot_news_radio.launch.py  turtle_hunt.launch.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/turtle_hunt_py_pkg/: package.xml  setup.py
src/turtle_hunt_py_pkg/turtle_hunt_py_pkg/: turtle1_controller.py  turtle_spawner.py
(+56 files in other folders)
